[gd_scene load_steps=14 format=2]

[ext_resource path="res://sprites/buttons or icons/back button.png" type="Texture" id=1]
[ext_resource path="res://sprites/background/student register & login & character selection bg.png" type="Texture" id=3]
[ext_resource path="res://sprites/buttons or icons/password label.png" type="Texture" id=4]
[ext_resource path="res://sprites/buttons or icons/confirm password label.png" type="Texture" id=6]
[ext_resource path="res://sprites/buttons or icons/class label.png" type="Texture" id=7]
[ext_resource path="res://sprites/buttons or icons/email label.png" type="Texture" id=8]
[ext_resource path="res://sprites/buttons or icons/continue button.png" type="Texture" id=9]
[ext_resource path="res://Registration Login/Registration/Student Registration/StudentRegistrationPage.gd" type="Script" id=10]
[ext_resource path="res://sprites/font/PixulBrush.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 11 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 11 )

[node name="StudentRegistrationPage" type="CanvasLayer"]
script = ExtResource( 10 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="TextureRect" parent="."]
margin_left = 32.0
margin_top = 352.0
margin_right = 546.0
margin_bottom = 522.0
texture = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClassLabel" type="TextureRect" parent="."]
margin_left = 32.0
margin_top = 616.0
margin_right = 544.0
margin_bottom = 792.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordLabel" type="TextureRect" parent="."]
margin_left = 888.0
margin_top = 352.0
margin_right = 1520.0
margin_bottom = 522.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmPasswordLabel" type="TextureRect" parent="."]
margin_left = 888.0
margin_top = 616.0
margin_right = 1520.0
margin_bottom = 792.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="TextureButton" parent="."]
margin_left = 664.0
margin_top = 910.0
margin_right = 1232.0
margin_bottom = 1067.0
texture_normal = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 48.0
margin_top = 24.0
margin_right = 144.0
margin_bottom = 104.0
texture_normal = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailInput" type="LineEdit" parent="."]
margin_left = 488.0
margin_top = 392.0
margin_right = 968.0
margin_bottom = 464.0
rect_pivot_offset = Vector2( 256, 24 )
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PasswordInput" type="LineEdit" parent="."]
margin_left = 1392.0
margin_top = 392.0
margin_right = 1872.0
margin_bottom = 464.0
rect_pivot_offset = Vector2( 256, 24 )
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmPasswordInput" type="LineEdit" parent="."]
margin_left = 1392.0
margin_top = 680.0
margin_right = 1872.0
margin_bottom = 752.0
rect_pivot_offset = Vector2( 256, 24 )
custom_fonts/font = SubResource( 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClassDropdownButton" type="OptionButton" parent="."]
margin_left = 490.245
margin_top = 688.0
margin_right = 978.245
margin_bottom = 772.0
theme = SubResource( 3 )
custom_fonts/font = SubResource( 1 )
custom_constants/hseparation = 100
custom_constants/arrow_margin = 20
text = "Class A"
align = 1
items = [ "Class A", null, false, 0, null, "Class B", null, false, 1, null, "Class C", null, false, 2, null, "Class D", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NoMatchLabel" type="Label" parent="."]
margin_left = 1336.0
margin_top = 776.0
margin_right = 1916.0
margin_bottom = 883.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.984314, 0.0313726, 0.0313726, 1 )
text = "passwords 
do not match!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="item_selected" from="ClassDropdownButton" to="." method="_on_ClassDropdownButton_item_selected"]
